--- a/index.html
+++ b/index.html
@@ -15,55 +15,56 @@
 			<div class="container day">
 				<div class="weekday" id="mon">
 					<div><span class="minute-counter"><num>0</num> min</span></div>
-					<canvas height="250px" width = "60px"class="slider"></canvas>
+					<div class="slider" id="slidermon"></div>
 				</div>
 					<h5 id="name-of-day">Mon</h5>
 			</div>
 			<div class="container day">
 				<div class="weekday" id="tue">
 					<div><span class="minute-counter"><num>0</num> min</span></div>
-					<canvas height="250px" width = "60px"class="slider"></canvas>
+					<div class="slider" id="slidertue"></div>
 				</div>
 					<h5 id="name-of-day">Tue</h5>
 			</div>
 			<div class="container day">
 				<div class="weekday" id="wed">
 					<div><span class="minute-counter"><num>0</num> min</span></div>
-					<canvas height="250px" width = "60px"class="slider"></canvas>
+					<div class="slider" id="sliderwed"></div>
 				</div>
 					<h5 id="name-of-day">Wed</h5>
 			</div>
 			<div class="container day">
 				<div class="weekday" id="thu">
 					<div><span class="minute-counter"><num>0</num> min</span></div>
-					<canvas height="250px" width = "60px"class="slider"></canvas>
+					<div class="slider" id="sliderthu"></div>
 				</div>
 					<h5 id="name-of-day">Thu</h5>
 			</div>
 			<div class="container day">
 				<div class="weekday" id="fri">
 					<div><span class="minute-counter"><num>0</num> min</span></div>
-					<canvas height="250px" width = "60px"class="slider"></canvas>
+					<div class="slider" id="sliderfri"></div>
 				</div>
 					<h5 id="name-of-day">Fri</h5>
 			</div>
 			<div class="container day">
 				<div class="weekday" id="sat">
 					<div><span class="minute-counter"><num>0</num> min</span></div>
-					<canvas height="250px" width = "60px"class="slider"></canvas>
+					<div class="slider" id="slidersat"></div>
 				</div>
 					<h5 id="name-of-day">Sat</h5>
 			</div>
 			<div class="container day">
 				<div class="weekday" id="sun">
 					<div><span class="minute-counter"><num>0</num> min</span></div>
-					<canvas height="250px" width = "60px"class="slider"></canvas>
+					<div class="slider" id="slidersun"></div>
 				</div>
 					<h5 id="name-of-day">Sun</h5>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src= "jquery.js"></script>
+	<script type="text/javascript" src= "kinetic.js"></script>
 	<script type="text/javascript" src= "main.js"></script>
-
 </body>
 </html>
